[gd_scene load_steps=3 format=3 uid="uid://c66tiay1tyqmb"]

[ext_resource type="Script" path="res://scripts/vida.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://w4fa140jorkq" path="res://assets/NaveDesvio.png" id="2_i0ai8"]

[node name="vida" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="vidas0" type="Sprite2D" parent="."]
position = Vector2(5.5, -1.5)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_i0ai8")
hframes = 3

[node name="vidas1" type="Sprite2D" parent="."]
position = Vector2(5.5, 45.5)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_i0ai8")
hframes = 3

[node name="vidas2" type="Sprite2D" parent="."]
position = Vector2(5.5, 95.5)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_i0ai8")
hframes = 3

[node name="vidas3" type="Sprite2D" parent="."]
position = Vector2(5.5, 140.5)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_i0ai8")
hframes = 3
